[package]
name = "devicemapper"
version = "0.34.4"
authors = ["Stratis Developers <stratis-devel@lists.fedorahosted.org>"]
description = "A library for using Linux device mapper"
documentation = "https://docs.rs/devicemapper/"
repository = "https://github.com/stratis-storage/devicemapper-rs"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["Linux", "device", "mapper", "libdm", "storage"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
exclude = [".clippy.toml", ".githooks/*", ".gitignore", ".github/*", "Makefile"]

[dependencies]
bitflags = "2.3.3"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
semver = "1.0.0"

[dev-dependencies]
assert_matches = "1.5.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny", priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }
