[package]
name = "dm_ioctl"
version = "4.48.0" # keep this in sync with src/lib.rs
authors = [
  "Zack Weinberg <zack@owlfolio.org>",
  "Stratis Developers <stratis-devel@lists.fedorahosted.org>",
]
description = "Minimal safe wrapper around the Linux device-mapper API"
documentation = "https://docs.rs/dm_ioctl/"
repository = "https://git.sr.ht/~zackw/dm_ioctl/"
readme = "README.md"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["Linux", "device", "mapper", "libdm", "storage"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
exclude = [".clippy.toml", ".githooks/*", ".gitignore", ".github/*", "Makefile"]

[dependencies]
bitflags = "2.3.3"
nix = { version = "0.29.0", default-features = false, features = ["ioctl"] }
semver = "1.0.0"

[dev-dependencies]
assert_matches = "1.5.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny", priority = 1}
multiple-crate-versions = { level = "allow", priority = 2 }
